Wed Apr  7 09:51:12 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * tests/Hang_Shutdown/run_test.pl
        * tests/Hang_Shutdown/server.cpp
        * tests/OBV/TC_Alignment/run_test.pl
        Hang_Shutdown:Pass ior filenmae through commandline.
        TC_Alignment: remove duplicate header.

Wed Apr  7 08:44:12 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * tests/HandleExhaustion/run_test.pl
        Pass ior file nasme through commandline.

Wed Apr  7 08:28:12 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * tests/POA/EndpointPolicy/server.cpp
        Add svc.conf filename through command line option in help.

Tue Apr  6 12:40:12 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_component/servant_svs.cpp:
          Throw an exception as default, see 6.4.3.3 from the CCM spec

Mon Apr  5 16:49:57 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be_include/be_component.h:
        * TAO_IDL/be/be_component.cpp:

          Added code to scan component scope and set flags indicating
          the presence or absence of provides, uses, publishes, emits
          and consumes ports as well as attributes. Scan includes
          inherited components' scopes, if any, and also searches the
          porttype associated with extended ports and mirror ports.

        * TAO_IDL/be/be_visitor_component/component_svh.cpp:

          Added line to trigger component scan at the beginning of
          code generation for each component. Thereafter the only
          overhead is accessing the flags.

        * TAO_IDL/be/be_visitor_component/context_svh.cpp:

          Added checks to determine if a component is equivalent to
          a connector, i.e., that it has no event-related ports. If
          so, the leaner servant base class typedef is generated in
          this case as well as for an actual connector.
